--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-    "proxy": "http://localhost:9000", // no need to write full path in the actual routes and works whn deployed
+    "proxy": "http://localhost:9000",
     "eslintConfig": {
         "extends": "react-app"
     },
