--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "script": "node server",
-        "dev": "nodemon server"
+        "client-install": "npm install --prefix client",
+        "start": "node server.js",
+        "server": "nodemon server.js",
+        "client": "npm start --prefix client",
+        "dev": "concurrently \"npm run server\" \"cd client && npm install && npm start\"",
+        "heroku-postbuild": "cd client && npm install && npm run build"
     },
     "keywords": [],
     "author": "",
@@ -19,6 +23,7 @@
         "mongoose": "^5.5.14"
     },
     "devDependencies": {
+        "concurrently": "^4.1.0",
         "nodemon": "^1.19.1"
     }
 }
