--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-    "proxy": "https://localhost:9000",
+    "proxy": "localhost:9000",
     "eslintConfig": {
         "extends": "react-app"
     },
