--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "license": "ISC",
     "dependencies": {
         "axios": "^0.19.0",
+        "bcryptjs": "^2.4.3",
         "bootstrap": "^4.3.1",
         "cors": "^2.8.5",
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
+        "gravatar": "^1.8.0",
         "mongoose": "^5.5.14"
     },
     "devDependencies": {
